<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MM Cleaner</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="tap_to_start_scan_and_analyze_your_phone">Tap to start scan and analyze your phone</string>
    <string name="scan_and_analize">Scan and analize</string>
    <string name="scaning">Scanning…</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="android">Android</string>
    <string name="cpu">CPU</string>
    <string name="ram">RAM</string>
    <string name="memory">Memory</string>
    <string name="clear">Clear</string>
    <string name="ram_used">RAM used</string>
    <string name="cpu_temperature">CPU temperature</string>
    <string name="battery_charge">Battery charge</string>
    <string name="free_memory">Free memory</string>
    <string name="applications_in_the_background">Applications in the background</string>
    <string name="consuming_applications">Consuming applications</string>
    <string name="unnecessary_files">Unnecessary files</string>
    <string name="loading_ads">Loading ADS</string>
    <string name="speed_up">Speed up</string>
    <string name="step_2">Step 2</string>
    <string name="clean_up_ram_and_speed_up_your_phone">Clean up RAM and speed up your phone</string>
    <string name="last_step">Last step</string>
    <string name="optimize_battery_consumption">Optimize battery consumption</string>
    <string name="optimize">Optimize</string>
    <string name="your_phone_has_been_successfully_optimized">Your phone has been successfully optimized!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="to_main">To main</string>
    <string name="rate_us">Rate us</string>
    <string name="do_you_like">Do you like the app? Put 5!</string>
    <string name="your_phone_is_not_optimized">Your phone is not optimized!</string>
    <string name="follow_these_steps">Follow these steps to get your phone running faster!</string>

    <string name="this_function_is_already_optimized">This function is already optimized</string>

    <!-- Notifications -->
    <string name="notification_clear" translatable="false">Clear</string>
    <string name="notification_cancel" translatable="false">Cancel</string>
    <string name="notification_optimize" translatable="false">Optimize</string>
    <string name="notification_percent_placeholder" translatable="false">%d%%</string>
    <string name="notification_mb_placeholder" translatable="false">%.1fMB</string>

    <!-- Battery -->
    <string name="notification_charging_placeholder" translatable="false">Charging %d%%</string>
    <string name="notification_programs_slow_down_text_placeholder" translatable="false">%d programs slow down the charging speed</string>

    <string name="notification_residual_data_found" translatable="false">Residual data found</string>
    <string name="notification_after_unloading_placeholder" translatable="false">after unloading, the remainder of <b>%.1fMB</b>\nwas found cleaning to get a lot of memory</string>
    <string name="notification_ads_trash" translatable="false">Ads rubbish</string>
    <string name="notification_apps_cache" translatable="false">Apps cache</string>
    <string name="notification_other_trash" translatable="false">Other garbage</string>

    <string name="notification_daily_title" translatable="false"><font color="#333A44">MM</font> <font color="#FE6201">CLEANER</font></string>
    <string name="notification_daily_description" translatable="false">You haven\'t cleaned the trash in <font color="#FE6201">1 day</font></string>
=======
    <string name="done">Done!</string>
    <string name="we_ll_let_you_know_when_your_phone_needs_cleaning">We\'ll let you know when your phone needs cleaning</string>
    <string name="battery">Battery</string>
    <string name="operation_failed"> of 3 operation failed!</string>
    <string name="junk_cleaner">Junk cleaner!</string>
    <string name="booster">Booster</string>
    <string name="baterry_saver">Baterry saver</string>
    <string name="widget">Widget</string>
    <string name="notification">Notification</string>
    <string name="update">Update</string>
    <string name="clear_notif">Clear</string>
    <string name="baterry_notif">Baterry</string>
    <string name="speed_up_notif">Speed up</string>
    <string name="temperature_notif">Temperature</string>
    <string name="lantern_notif">Lantern</string>
    <string name="scanning">Scanning....</string>
    <string name="background_processes">Background processes</string>
    <string name="energy_consumption_very_high">Energy consumption: Very high</string>
    <string name="done_scan">Done...</string>
    <string name="processes">Processes</string>
    <string name="hibernated">Hibernated!</string>
    <string name="hibernation">Hibernation</string>
    <string name="applications">Applications</string>
    <string name="treatment">Treatment...</string>
    <string name="was_released">Was released</string>
    <string name="optimized">Optimized!</string>
    <string name="acceleration">Acceleration...</string>
    <string name="the_phone_is_not_fully_noptimized">The phone is not fully\noptimized</string>
    <string name="clear_cache_and_temporary_files_to_improve_phone_performance">Clear cache and temporary files to improve phone performance</string>
    <string name="exit">Exit</string>
    <string name="allow_mm_cleaner_to_acess_your_app_statistics">Allow MM Cleaner to acess your app statistics</string>
    <string name="find_mm_cleaner_and_turn_it_on">Find MM Cleaner and turn it ON</string>
    <string name="allow">Allow</string>
    <string name="disallow">Disallow</string>
    <string name="thanks">Thanks!</string>
    <string name="we_will_continue_to_protect_your_phone">We will continue to protect your phone</string>
    <string name="optimization">Optimization</string>
    <string name="hibernate_apps_that_consume">Hibernate apps that consume a lot of power and optimize battery consumption!</string>
    <string name="operation_been_performed">This operation has already been performed</string>
    <string name="clear_cache_and_temporary">Clear cache and temporary files to improve phone performance!</string>
    <string name="your_phone_has_been_optimized">Your phone has been optimized!</string>
    <string name="free_up_memory_and_speed_up">Free up memory and speed up your phone!</string>
    <string name="click_again_to_exit">Click again to exit</string>
    <string name="settings">Settings</string>
    <string name="languages">Languages</string>
    <string name="english" translatable="false">English</string>
    <string name="change_language">Change language</string>
    <string name="apk_files">APK files</string>
    <string name="temporary_files">Temporary files</string>
    <string name="advertising_rub">Advertising rubbish</string>
    <string name="app_cache">Application cache</string>
    <string name="employed">% employed</string>
    <string name="chose_all">Choose all</string>
    <string name="count_app"> applications</string>
    <string name="cleaning">Cleaning ...</string>
</resources>