<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notification_app_removed_layout"
    android:layout_width="match_parent"
    android:layout_height="370dp"
    android:background="@drawable/shape_notif_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="24dp">

    <ImageView
        android:id="@+id/notification_app_removed_logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="12dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:gravity="center"
        android:lines="1"
        android:text="@string/notification_residual_data_found"
        android:textColor="@color/color_2F2C4C"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/notification_app_removed_details_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:gravity="center"
        android:lines="2"
        android:text="@string/notification_after_unloading_placeholder"
        android:textColor="@color/color_2F2C4C"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_notification_green_dot" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:fontFamily="@font/proxima_nova_semibold"
            android:lines="1"
            android:text="@string/notification_ads_trash"
            android:textColor="@color/color_2F2C4C"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/notification_app_removed_first_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/proxima_nova_semibold"
            android:gravity="end"
            android:lines="1"
            android:text="@string/notification_mb_placeholder"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_notification_blue_dot" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:fontFamily="@font/proxima_nova_semibold"
            android:lines="1"
            android:text="@string/notification_apps_cache"
            android:textColor="@color/color_2F2C4C"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/notification_app_removed_second_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/proxima_nova_semibold"
            android:gravity="end"
            android:lines="1"
            android:text="@string/notification_mb_placeholder"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_notification_red_dot" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:fontFamily="@font/proxima_nova_semibold"
            android:lines="1"
            android:text="@string/notification_other_trash"
            android:textColor="@color/color_2F2C4C"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/notification_app_removed_third_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/proxima_nova_semibold"
            android:gravity="end"
            android:lines="1"
            android:text="@string/notification_mb_placeholder"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/notification_app_removed_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_notif_button_cancel"
            android:fontFamily="@font/proxima_nova_bold"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:text="@string/notification_cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notification_app_removed_optimize_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/shape_notif_button_optimize"
            android:fontFamily="@font/proxima_nova_bold"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:text="@string/optimize"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>