<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/clear_l"
        android:gravity="center"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="13dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_junk_active"/>
        <TextView
            android:id="@+id/clear_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:fontFamily="@font/proxima_nova_semibold"
            android:textColor="@color/color_8E9AAB"
            android:textSize="10sp"
            android:text="@string/clear"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/battery_l"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="13dp"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/batteru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_battery_active"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:fontFamily="@font/proxima_nova_semibold"
            android:textColor="@color/color_8E9AAB"
            android:textSize="10sp"
            android:text="@string/battery"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/booster_l"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="13dp"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_booster_active"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:fontFamily="@font/proxima_nova_semibold"
            android:textColor="@color/color_8E9AAB"
            android:textSize="10sp"
            android:text="@string/speed_up"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="13dp"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_temperature"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:fontFamily="@font/proxima_nova_semibold"
            android:textColor="@color/color_8E9AAB"
            android:textSize="10sp"
            android:text="@string/temperature_notif"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lantern_l"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="13dp"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/lantern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lantern"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:fontFamily="@font/proxima_nova_semibold"
            android:textColor="@color/color_8E9AAB"
            android:textSize="10sp"
            android:text="@string/lantern_notif"/>
    </LinearLayout>

</LinearLayout>